--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
       "types": "./dist/auth.d.ts",
       "import": "./dist/auth.js"
     },
+    "./google-auth": {
+      "types": "./dist/google-auth.d.ts",
+      "import": "./dist/google-auth.js"
+    },
     "./schema.json": "./dist/oh-my-opencode.schema.json"
   },
   "scripts": {
-    "build": "bun build src/index.ts src/auth.ts --outdir dist --target bun --format esm --external @ast-grep/napi && tsc --emitDeclarationOnly && bun run build:schema",
+    "build": "bun build src/index.ts src/auth.ts src/google-auth.ts --outdir dist --target bun --format esm --external @ast-grep/napi && tsc --emitDeclarationOnly && bun run build:schema",
     "build:schema": "bun run script/build-schema.ts",
     "clean": "rm -rf dist",
     "prepublishOnly": "bun run clean && bun run build",
