feat(ci): implement automatic draft release management
- Add draft-release job in ci.yml that creates/updates draft release with tag 'next' and title 'Upcoming Changes 🍿'
- Generate release notes based on commits since latest published release
- Add step in publish.yml to delete draft release after successful publish
- Follows indentcorp/backend pattern for automatic draft release management

🤖 Generated with assistance of OhMyOpenCode (https://github.com/code-yeongyu/oh-my-opencode)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -89,3 +89,8 @@ jobs:
           CI: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
+
+      - name: Delete draft release
+        run: gh release delete next --yes 2>/dev/null || echo "No draft release to delete"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
