--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
     "xdg-basedir": "^5.1.0",
+    "turndown": "^7.2.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/picomatch": "^3.0.2",
+    "@types/turndown": "^5.0.5",
     "bun-types": "latest",
     "typescript": "^5.7.3"
   },
