--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "hono": "^4.10.4",
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
-    "xdg-basedir": "^5.1.0",
     "turndown": "^7.2.0",
+    "xdg-basedir": "^5.1.0",
+    "yaml": "^2.8.2",
     "zod": "^4.1.8"
   },
   "devDependencies": {
