feat: Musashi v2 + Planner-Musashi v2 with memory-first routing
Musashi v2:
- Memory-first protocol: supermemory search before any action
- Beads integration for project state tracking
- 9 scenario workflows with exact formulas (Frontend, Backend, Debug, Growth, etc)
- Agent-Skill Matrix: 16 agents mapped to 44 skills
- Mandatory LOAD SKILLS in delegation prompts

Planner-Musashi v2:
- Spec-oriented: outputs to .opencode/blueprints/ and docs/specs/
- EXTEND OUTWARD principle: creative extensions, never just mirror
- Risk callouts for short/long-term issues
- Research Protocol with exact tool counts per request type
- Tool Routing Matrix: context7 for docs, grep_app for code, Ninja for codebase
- Blueprint + ADR templates for documentation
- Can orchestrate Ninja/Shisho/Kenja, NOT implementation agents

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@opencode-ai/sdk": "^1.0.162",
     "commander": "^14.0.2",
     "hono": "^4.10.4",
+    "opencode-antigravity-auth": "1.2.6",
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
     "turndown": "^7.2.0",
