feat: inject supermemory context during compaction
- Add opencode-supermemory as optional peerDependency
- Create src/hooks/preemptive-compaction/supermemory.ts
- Inject project memories before session.summarize()
- Add experimental.inject_supermemory_context config option (default: true)
- Graceful degradation when supermemory not installed

Also fixes: escape backticks in agent prompt template literals

--- a/package.json
+++ b/package.json
@@ -67,6 +67,14 @@
     "yaml": "^2.8.2",
     "zod": "^4.1.8"
   },
+  "peerDependencies": {
+    "opencode-supermemory": ">=1.0.0"
+  },
+  "peerDependenciesMeta": {
+    "opencode-supermemory": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@types/picomatch": "^3.0.2",
     "@types/turndown": "^5.0.5",
