feat(tools): add built-in supermemory tool
Ports supermemory from external plugin to built-in tool:
- src/tools/supermemory/ - types, constants, client, tools
- Replaces dynamic plugin import with direct SDK usage
- Updates preemptive-compaction to use built-in integration
- Adds supermemory@4.0.0 as direct dependency
- Removes opencode-supermemory peer dependency

Config still reads from ~/.config/opencode/supermemory.json
Tool API unchanged: add, search, profile, list, forget, help

--- a/package.json
+++ b/package.json
@@ -62,18 +62,11 @@
     "opencode-antigravity-auth": "1.2.6",
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
+    "supermemory": "^4.0.0",
     "turndown": "^7.2.0",
     "xdg-basedir": "^5.1.0",
     "yaml": "^2.8.2",
     "zod": "^4.1.8"
-  },
-  "peerDependencies": {
-    "opencode-supermemory": ">=1.0.0"
-  },
-  "peerDependenciesMeta": {
-    "opencode-supermemory": {
-      "optional": true
-    }
   },
   "devDependencies": {
     "@types/picomatch": "^3.0.2",
