feat: add bird (X/Twitter) tool + syncthing fixes
- Add bird tool for posting/reading tweets via browser cookies
- Update syncthing types
- Fix antigravity message converter
- Gitignore syncthing versioning folders
- Update beads issues

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@openauthjs/openauth": "^0.4.3",
     "@opencode-ai/plugin": "^1.0.162",
     "@opencode-ai/sdk": "^1.0.162",
+    "@steipete/bird": "^0.5.1",
     "commander": "^14.0.2",
     "hono": "^4.10.4",
     "opencode-antigravity-auth": "1.2.6",
