--- a/package.json
+++ b/package.json
@@ -50,28 +50,28 @@
   },
   "homepage": "https://github.com/code-yeongyu/oh-my-opencode#readme",
   "dependencies": {
-    "@ast-grep/cli": "^0.40.0",
-    "@ast-grep/napi": "^0.40.0",
+    "@ast-grep/cli": "^0.40.4",
+    "@ast-grep/napi": "^0.40.4",
     "@clack/prompts": "^0.11.0",
-    "@code-yeongyu/comment-checker": "^0.6.0",
+    "@code-yeongyu/comment-checker": "^0.7.0",
     "@openauthjs/openauth": "^0.4.3",
-    "@opencode-ai/plugin": "^1.0.162",
-    "@opencode-ai/sdk": "^1.0.162",
+    "@opencode-ai/plugin": "^1.1.11",
+    "@opencode-ai/sdk": "^1.1.11",
     "commander": "^14.0.2",
-    "hono": "^4.10.4",
-    "opencode-antigravity-auth": "1.2.6",
+    "hono": "^4.11.3",
+
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.2",
     "supermemory": "^4.0.0",
     "turndown": "^7.2.0",
     "xdg-basedir": "^5.1.0",
     "yaml": "^2.8.2",
-    "zod": "^4.1.8"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@types/picomatch": "^3.0.2",
+    "@types/picomatch": "^4.0.2",
     "@types/turndown": "^5.0.5",
-    "bun-types": "latest",
+    "bun-types": "^1.3.5",
     "typescript": "^5.7.3"
   },
   "trustedDependencies": [
