feat: category→skill auto-injection + fixes
- Add CATEGORY_SKILLS mapping for auto-injecting skills per category
- Add getCategorySkills() with user override support via config
- Add category_skills schema for user customization
- Fix Sisyphus→Musashi branding in skill-content tests
- Fix CI workflow to use Musashi agent config
- Add session files to .gitignore
- Fix ToolContext mock in tests (metadata/ask props)
- Update to @opencode-ai/plugin@1.1.30

--- a/.github/workflows/sisyphus-agent.yml
+++ b/.github/workflows/sisyphus-agent.yml
@@ -284,7 +284,7 @@ jobs:
           - user.email: sisyphus-dev-ai@users.noreply.github.com
           PROMPT_EOF
           )
-          jq --arg append "$PROMPT_APPEND" '.agents.Sisyphus.prompt_append = $append' "$OMO_JSON" > /tmp/omo.json && mv /tmp/omo.json "$OMO_JSON"
+          jq --arg append "$PROMPT_APPEND" '.agents.Musashi.prompt_append = $append' "$OMO_JSON" > /tmp/omo.json && mv /tmp/omo.json "$OMO_JSON"
 
           mkdir -p ~/.local/share/opencode
           echo "$OPENCODE_AUTH_JSON" > ~/.local/share/opencode/auth.json
